--- a/account.html
+++ b/account.html
@@ -17,7 +17,7 @@
   <nav-header></nav-header>
 
   <!-- main container -->
-  <div class="section-box">
+  <main class="section-box">
     <section class="section">
       <div class="content account">
         <div class="main-title l-font">
@@ -25,11 +25,11 @@
           <div>會員資料</div>
         </div>
         <div class="tab actions">
-          <div class="tab-item actions-btn active" id="tab1">帳號設定</div>
-          <div class="tab-item actions-btn" id="tab2">修改密碼</div>
+          <button class="tab-item actions-btn active" id="tab1">帳號設定</button>
+          <button class="tab-item actions-btn" id="tab2">修改密碼</button>
         </div>
         <div class="tab-content">
-          <div class="tab" data-id="tab1">
+          <div data-id="tab1">
             <div class="content-row">
             <div class="row-right row-5">
               <div class="info">
