--- a/book-history.html
+++ b/book-history.html
@@ -17,7 +17,7 @@
   <nav-header></nav-header>
 
   <!-- main container -->
-  <div class="section-box">
+  <main  class="section-box">
     <section class="section">
       <div class="content booking-history">
         <div class="main-title l-font">
@@ -25,9 +25,9 @@
           <div>訂票查詢與取消</div>
         </div>
         <div class="actions">
-          <div class="actions-btn tab-item active">尚未取票</div>
-          <div class="actions-btn tab-item">完成觀看</div>
-          <div class="actions-btn tab-item">已取消</div>
+          <button class="actions-btn tab-item active">尚未取票</button>
+          <button class="actions-btn tab-item">完成觀看</button>
+          <button class="actions-btn tab-item">已取消</button>
         </div>
         <div class="tab-content">
           <div class="content-row item">
@@ -107,7 +107,7 @@
         </div>
       </div>
     </section>
-  </div>
+  </main>
   <!-- main container -->
   
   <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
