--- a/group-ticket.html
+++ b/group-ticket.html
@@ -16,7 +16,7 @@
   <nav-header></nav-header>
 
   <!-- main container -->
-  <div class="section-box">
+  <main class="section-box">
     <section class="section">
       <div class="content news">
         <div class="main-title l-font">
@@ -47,11 +47,10 @@
             </div>
             </a>
           </div>
-       
         </div>
       </div>
     </section>
-  </div>
+  </main>
   <!-- main container -->
 
   <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
