--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   </div>
 
   <!-- main container -->
-  <div class="section-box">
+  <main class="section-box">
     <section class="section">
       <div class="main-title l-font">
         <div class="s-font">NOW SHOWING</div>
@@ -299,7 +299,7 @@
         </div>
       </div>
     </section>
-  </div>
+  </main>
   <!-- main container -->
 
   <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
