--- a/movie-info.html
+++ b/movie-info.html
@@ -16,7 +16,7 @@
   <nav-header></nav-header>
 
   <!-- main container -->
-  <div class="section-box">
+  <main  class="section-box">
     <section class="section">
       <div class="content content-row">
         <div class="movie-item row-3">
@@ -58,7 +58,7 @@
       </div>
     </section>
 
-  </div>
+  </main>
   <!-- main container -->
 
   <!-- footer -->
