--- a/news-info.html
+++ b/news-info.html
@@ -16,7 +16,7 @@
   <nav-header></nav-header>
 
   <!-- main container -->
-  <div class="section-box">
+  <main class="section-box">
     <section class="section">
       <div class="content news-info">
         <div class="actions">
@@ -42,7 +42,7 @@
         </div>
       </div>
     </section>
-  </div>
+  </main>
   <!-- main container -->
 
   <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
