--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@
   <nav-header></nav-header>
 
   <!-- main container -->
-  <div class="section-box">
+  <main class="section-box">
     <section class="section">
       <div class="content news">
         <div class="main-title l-font">
@@ -133,7 +133,7 @@
         </div>
       </div>
     </section>
-  </div>
+  </main>
   <!-- main container -->
 
   <div class="gotop"><span class="material-icons">arrow_drop_up</span></div>
