--- a/header.html
+++ b/header.html
@@ -85,7 +85,7 @@
               </div>
             </div>
           </div>
-          <div class="info submmitbtn">
+          <div class="info actionbtn">
             <button>LOGIN</button>
             <a href="#regist" class="xs-font">尚未申請帳號！馬上註冊!</a>
           </div>
@@ -124,7 +124,7 @@
               <span class="checkmark"></span>
             </label>
           </div>
-          <div class="info submmitbtn">
+          <div class="info actionbtn">
             <button>REGISTER</button>
             <a href="#login" class="xs-font">已有帳號！馬上登入</a>
           </div>
