編輯會員頁面，調整樣式

--- a/account.html
+++ b/account.html
@@ -51,7 +51,7 @@
                   </div>
                   <div class="row">
                     <label for="phone">行動電話</label>
-                    <input type="number" id="phone" placeholder="09123456789">
+                    <input type="text" id="phone" placeholder="09123456789">
                   </div>
                 </div>
                 <div class="row-right row-5">
@@ -64,13 +64,13 @@
                     <input type="date">
                   </div>
                   <div class="row actionbtn">
-                    <button type="button">儲存修改密</button>
-                    <div>儲存修改密碼 <span class="material-icons">
-                            lock_outline
-                          </span></div>
+                    <button type="button">信件尚未驗證 <span>點此發送驗證郵件</span></button>
+                    <div>驗證成功 <span class="material-icons">
+                      mark_email_read
+                    </span></div>
                   </div>
                   <div class="row actionbtn">
-                    <button type="submit">儲存修改密碼 <span class="material-icons">
+                    <button type="submit">儲存修改資料 <span class="material-icons">
                         lock_outline
                       </span></button>
                   </div>
@@ -101,7 +101,7 @@
                   </span>
                   <input type="password" id="reconfirmpwd" placeholder="請輸入6-10位含大小寫英數字">
                 </div>
-                <div class="row actionbtn">
+                <div class="row actionbtn fit-center">
                   <button type="submit">儲存修改密碼 <span class="material-icons">
                       lock_outline
                     </span></button>
