測試 動畫在手機上狀態

--- a/book-history.html
+++ b/book-history.html
@@ -75,8 +75,8 @@
               <div class="row-right row-8">
                 <div class="ticket-no">取票序號<span>#123456789</span></div>
                 <div class="movie-title">
-                  <h3 class="l-font ellipsis">劫命救護</h3>
-                  <span class="s-font ellipsis">AMBULANCE</span>
+                  <h3 class="l-font ellipsis">30歳まで童貞だと魔法使いになれるらしい</h3>
+                  <span class="s-font ellipsis">Cherry Magic! Thirty Years of Virginity Can Make You a Wizard?!</span>
                 </div>
                 <div class="booking-list content-row">
                   <div class="row-5">
@@ -194,7 +194,6 @@
   
   <!-- footer -->
   <bottom-footer></bottom-footer>
-
 
   <script src="js/jquery.min.js"></script>
   <script src="js/vue.js"></script>
