--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <a href="">
-            <img data-src="https://picsum.photos/g/1920/740?random=2" class="swiper-lazy" />
+            <img data-src="image/123.jpg" class="swiper-lazy" />
             <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
           </a>
         </div>
         <div class="swiper-slide">
           <a href="">
-            <img data-src="https://picsum.photos/g/1920/740?random=2" class="swiper-lazy" />
+            <img data-src="image/123.jpg" class="swiper-lazy" />
             <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
           </a>
         </div>
         <div class="swiper-slide">
           <a href="">
-            <img data-src="https://picsum.photos/g/1920/740?random=2" class="swiper-lazy" />
+            <img data-src="image/123.jpg" class="swiper-lazy" />
             <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
           </a>
         </div>
@@ -258,7 +258,8 @@
               <select>
                 <option value="value1">請選擇場次</option>
                 <option value="value2">Value 2</option>
-                <option value="value3">Value 3</option>
+                <opti value="value3">Value 3</opti
+                  on>
               </select>
             </div>
           </div>
