--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>BROADWAY CINEMAS - 百老匯影城</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link rel="stylesheet" href="css/global.min.css" />
   <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="css/global.min.css" />
   <link rel="stylesheet" href="css/all.min.css" />
 
   <style>
@@ -97,8 +97,8 @@
   <div class="landing">
     <div class="landing-page">
       <h1 style="--td: 1.2s">
-        <span class="block-reveal" style="--bc: #C53932; --d: .1s">BROADWAY</span>
-        <span class="block-reveal" style="--bc: #000; --d: .5s">CINEMAS</span>
+        <div class="block-reveal" style="--bc: #C53932; --d: .1s">BROADWAY</div>
+        <div class="block-reveal" style="--bc: #000; --d: .5s">CINEMAS</div>
       </h1>
     </div>
 
