--- a/movie-info.html
+++ b/movie-info.html
@@ -31,11 +31,11 @@
           <div class="up-date s-font">上映日期 2022-03-25</div>
           <button class="book-btn"><span class="material-icons"> featured_play_list </span>前往訂票</button>
           <div class="list-item">
-            <div>導演<span>麥可貝</span></div>
-            <div class="list-2">演員<div><span class="">傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
+            <div class="list-row">導演<span>麥可貝</span></div>
+            <div class="list-row">演員<div><span class="">傑克葛倫霍、愛莎岡薩雷、葉海雅阿巴杜馬丁二世傑克葛倫霍傑克葛倫霍、愛莎岡薩雷</span></div>
             </div>
-            <div>類型<span>動作、懸疑、驚悚、劇情</span></div>
-            <div>片長<span>136分鐘</span></div>
+            <div class="list-row">類型<span>動作、懸疑、驚悚、劇情</span></div>
+            <div class="list-row">片長<span>136分鐘</span></div>
           </div>
         </div>
       </div>
