--- a/book.html
+++ b/book.html
@@ -70,26 +70,22 @@
                   </span>數位標準
                 </div>
                 <div class="timetable">
-                  <div class="time disable">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time active">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
+                  <a class="time disable" href="">09:00</a>
+                  <a class="time active" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+
                 </div>
               </div>
             </div>
@@ -133,26 +129,18 @@
                   </span>數位標準
                 </div>
                 <div class="timetable">
-                  <div class="time disable">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time active">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
+                  <a class="time disable" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time active" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
                 </div>
               </div>
             </div>
@@ -199,26 +187,17 @@
                 </div>
                 <div class="timetable">
                   <a class="time disable" href="">09:00</a>
-                  <div>09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time active">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
-                  <div class="time">09:00</div>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time active" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
+                  <a class="time" href="">09:00</a>
                 </div>
               </div>
             </div>
