編輯訂票頁面，調整樣式

--- a/book.html
+++ b/book.html
@@ -38,7 +38,7 @@
                 <div class="movie-item row-6">
                   <div class="movie-level y12">護6級</div>
                   <div class="movie-title">
-                    <h3 class="l-font">劫命救護</h3>
+                    <p class="l-font">劫命救護</p>
                     <span>AMBULANCE</span>
                   </div>
                   <div class="up-date">上映日期 2022-03-25</div>
@@ -97,7 +97,7 @@
                 <div class="movie-item row-6">
                   <div class="movie-level y12">護6級</div>
                   <div class="movie-title">
-                    <h3 class="l-font">劫命救護</h3>
+                    <p class="l-font">劫命救護</p>
                     <span>AMBULANCE</span>
                   </div>
                   <div class="up-date">上映日期 2022-03-25</div>
@@ -154,7 +154,7 @@
                 <div class="movie-item row-6">
                   <div class="movie-level y12">護6級</div>
                   <div class="movie-title">
-                    <h3 class="l-font">如果30歲還是處男，似乎就能成為魔法師</h3>
+                    <p class="l-font">如果30歲還是處男，似乎就能成為魔法師</p>
                     <span>Cherry Magic! Thirty Years Of Virginity Can Make You A Wizard ?!</span>
                   </div>
                   <div class="up-date">上映日期 2022-03-25</div>
