--- a/movie-info.html
+++ b/movie-info.html
@@ -18,14 +18,14 @@
   <!-- main container -->
   <main  class="section-box">
     <section class="section">
-      <div class="content content-row">
+      <div class="content content-row movie-info">
         <div class="movie-item row-3">
           <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
         </div>
         <div class="movie-item row-7">
           <div class="movie-level y12">護6級</div>
           <div class="movie-title">
-            <h3 class="l-font ellipsis">劫命救護</h3>
+            <p class="l-font ellipsis">劫命救護</p>
             <span class="s-font ellipsis">AMBULANCE</span>
           </div>
           <div class="up-date s-font">上映日期 2022-03-25</div>
