--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="url" content="">
   <link rel="canonical" href="">
   <meta property="og:url" content="">
-  <meta property="og:image" content="image/favicon/favicon.png">
+  <meta property="og:image" content="image/favicon.png">
   <meta property="og:image:width" content="1000">
   <meta property="og:image:height" content="523">
   <meta property="og:type" content="article">
@@ -26,9 +26,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Broadway百老匯影城">
-  <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/favicon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/favicon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/global.min.css" />
