增加訂票步驟一頁面

--- a/book.html
+++ b/book.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="timetable">
                   <a class="time disable" href="">09:00</a>
-                  <a class="time active" href="">09:00</a>
+                  <a class="time active" href="book-step1.html">09:00</a>
                   <a class="time" href="">09:00</a>
                   <a class="time" href="">09:00</a>
                   <a class="time" href="">09:00</a>
