--- a/group-ticket.html
+++ b/group-ticket.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/all.min.css" />
 </head>
 
-<body class="no-scroll" id="app">
+<body   id="app">
   <!-- header -->
   <nav-header></nav-header>
 
@@ -24,8 +24,8 @@
           <div>業務專區</div>
         </div>
         <div class="content-row">
-          <a href="news-info.html ">
           <div class="event row-3-1">
+            <a href="news-info.html ">
             <img src="https://fakeimg.pl/350x250/" alt="event-name" />
             <div>
               <p class="sub-title">
@@ -36,17 +36,7 @@
             </div>
             </a>
           </div>
-          <div class="event row-3-1">
-            <img src="https://fakeimg.pl/350x250/" alt="event-name" />
-            <div class="">
-              <p class="sub-title">
-                看指定電影送限定海報
-              </p>
-              <hr class="hr-line"/>
-              <p>2022.08.13</p>
-            </div>
-            </a>
-          </div>
+        </div>
         </div>
       </div>
     </section>
