--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
   </style>
 </head>
 
-<body class="no-scroll" id="app">
+<body id="app">
   <!-- landing -->
   <div class="landing">
     <div class="landing-page">
-      <h1 style="--td: 1s">
-        <div class="block-reveal" style="--bc: #C53932; --d: .1s">BROADWAY</div>
-        <div class="block-reveal" style="--bc: #000; --d: .5s">CINEMAS</div>
+      <h1 style="--td: .8s">
+        <div class="block-reveal" style="--bc: #C53932; --d: .6s">BROADWAY</div>
+        <div class="block-reveal" style="--bc: #000; --d: .9s">CINEMAS</div>
       </h1>
     </div>
 
