--- a/news-info.html
+++ b/news-info.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/all.min.css" />
 </head>
 
-<body class="no-scroll" id="app">
+<body   id="app">
   <!-- header -->
   <nav-header></nav-header>
 
