--- a/test.html
+++ b/test.html
@@ -74,7 +74,7 @@
   </style>
 </head>
 
-<body class="no-scroll" id="app">
+<body   id="app">
   
   <h1 class="block-effect" style="--td: 1.2s">
     <div class="block-reveal" style="--bc: #4040bf; --d: .1s">Block</div>
