編輯步驟一頁面

--- a/book-step1.html
+++ b/book-step1.html
@@ -39,8 +39,8 @@
             <div class="content-row movie-detail">
               <div class="row-5 detail"><span class="material-icons"> location_on </span>台北公館百老匯影城</div>
               <div class="row-5 detail"><span class="material-icons">videocam</span><span>21:30</span>標準數位 | 12聽</div>
-              <div class="row-5 detail"><span class="material-icons"> calendar_month </span>2022.08.08 星期一</div>
-              <div class="row-5 detail disable"><span class="material-icons">chair</span>請先選擇票種</div>
+              <div class="row-5 detail mb-0"><span class="material-icons"> calendar_month </span>2022.08.08 星期一</div>
+              <div class="row-5 detail disable mb-0"><span class="material-icons">chair</span>請先選擇票種</div>
             </div>
           </div>
           <div class="row-right row-3 ">
@@ -48,12 +48,44 @@
             <span class="material-icons"> featured_play_list </span>ORDER SUMMARY
             </div>
             <div class="summary-detail">
-              
+                <li><span class="ticket-name">全票</span>X<span class="ticket-number">8</span>=<span class="ticket-sum">$3000</span></li>
+                <li><span class="ticket-name">優待票</span>X<span class="ticket-number">1</span>=<span class="ticket-sum">$3000</span></li>
+                <li><span class="ticket-name">愛心票</span>X<span class="ticket-number">1</span>=<span class="ticket-sum">$3000</span></li>
+                <li><span class="ticket-name">網路訂票手續費</span>X<span class="ticket-number">10</span>=<span class="ticket-sum">$200</span>
+                </li>
             </div>
             <div class="summary-total">
-              
+              <li><span class="ticket-name">TICKETS TOTAL</span>NT$<span class="ticket-sum">$777</span>
+              </li>
             </div>
-
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section">
+      <div class="content ">
+        <div class="main-title l-font">
+          <div class="s-font">CHOOSE YOUR TICKET</div>
+          <div>請選擇票種與張數</div>
+        </div>
+        <div class="content-row">
+          <div class="row-left row-5">
+          </div>
+          <div class="row-right row-5">
+            <div class="summary l-font">
+            <span class="material-icons"> featured_play_list </span>ORDER SUMMARY
+            </div>
+            <div class="summary-detail">
+                <li><span class="ticket-name">全票</span>X<span class="ticket-number">8</span>=<span class="ticket-sum">$3000</span></li>
+                <li><span class="ticket-name">優待票</span>X<span class="ticket-number">1</span>=<span class="ticket-sum">$3000</span></li>
+                <li><span class="ticket-name">愛心票</span>X<span class="ticket-number">1</span>=<span class="ticket-sum">$3000</span></li>
+                <li><span class="ticket-name">網路訂票手續費</span>X<span class="ticket-number">10</span>=<span class="ticket-sum">$200</span>
+                </li>
+            </div>
+            <div class="summary-total">
+              <li><span class="ticket-name">TICKETS TOTAL</span>NT$<span class="ticket-sum">$777</span>
+              </li>
+            </div>
           </div>
         </div>
       </div>
