--- a/book-history.html
+++ b/book-history.html
@@ -38,7 +38,7 @@
               <div class="row-right row-8">
                 <div class="ticket-no">取票序號<span>#123456789</span></div>
                 <div class="movie-title">
-                  <h3 class="l-font ellipsis">劫命救護</h3>
+                  <p class="l-font ellipsis">劫命救護</p>
                   <span class="s-font ellipsis">AMBULANCE</span>
                 </div>
                 <div class="booking-list content-row">
@@ -75,7 +75,7 @@
               <div class="row-right row-8">
                 <div class="ticket-no">取票序號<span>#123456789</span></div>
                 <div class="movie-title">
-                  <h3 class="l-font ellipsis">30歳まで童貞だと魔法使いになれるらしい</h3>
+                  <p class="l-font ellipsis">30歳まで童貞だと魔法使いになれるらしい</p>
                   <span class="s-font ellipsis">Cherry Magic! Thirty Years of Virginity Can Make You a Wizard?!</span>
                 </div>
                 <div class="booking-list content-row">
@@ -114,7 +114,7 @@
               <div class="row-right row-8">
                 <div class="ticket-no">取票序號<span>#789456123</span></div>
                 <div class="movie-title">
-                  <h3 class="l-font ellipsis">劫命救護</h3>
+                  <p class="l-font ellipsis">劫命救護</p>
                   <span class="s-font ellipsis">AMBULANCE</span>
                 </div>
                 <div class="booking-list content-row">
@@ -153,7 +153,7 @@
               <div class="row-right row-8">
                 <div class="ticket-no">取票序號<span>#456123789</span></div>
                 <div class="movie-title">
-                  <h3 class="l-font ellipsis">劫命救護</h3>
+                  <p class="l-font ellipsis">劫命救護</p>
                   <span class="s-font ellipsis">AMBULANCE</span>
                 </div>
                 <div class="booking-list content-row">
