--- a/book-step1.html
+++ b/book-step1.html
@@ -12,14 +12,14 @@
 
 </head>
 
-<body   id="app">
+<body id="app">
   <!-- header -->
   <nav-header></nav-header>
 
   <!-- main container -->
   <main class="section-box">
     <section class="section">
-      <div class="content booking-s1">
+      <div class="content book-tickets">
         <div class="main-title l-font">
           <div class="s-font">ONLINE TICKET</div>
           <div>線上訂票</div>
@@ -38,21 +38,26 @@
             </div>
             <div class="content-row movie-detail">
               <div class="row-5 detail"><span class="material-icons"> location_on </span>台北公館百老匯影城</div>
-              <div class="row-5 detail"><span class="material-icons">videocam</span><span>21:30</span>標準數位 | 12聽</div>
+              <div class="row-5 detail"><span class="material-icons">videocam</span><span
+                  class="start-time">21:30</span>標準數位 | 12聽</div>
               <div class="row-5 detail mb-0"><span class="material-icons"> calendar_month </span>2022.08.08 星期一</div>
               <div class="row-5 detail disable mb-0"><span class="material-icons">chair</span>請先選擇票種</div>
             </div>
           </div>
           <div class="row-right row-3 ">
             <div class="summary l-font">
-            <span class="material-icons"> featured_play_list </span>ORDER SUMMARY
+              <span class="material-icons"> featured_play_list </span>ORDER SUMMARY
             </div>
             <div class="summary-detail">
-                <li><span class="ticket-name">全票</span>X<span class="ticket-number">8</span>=<span class="ticket-sum">$3000</span></li>
-                <li><span class="ticket-name">優待票</span>X<span class="ticket-number">1</span>=<span class="ticket-sum">$3000</span></li>
-                <li><span class="ticket-name">愛心票</span>X<span class="ticket-number">1</span>=<span class="ticket-sum">$3000</span></li>
-                <li><span class="ticket-name">網路訂票手續費</span>X<span class="ticket-number">10</span>=<span class="ticket-sum">$200</span>
-                </li>
+              <li><span class="ticket-name">全票</span>X<span class="ticket-number">8</span>=<span
+                  class="ticket-sum">$3000</span></li>
+              <li><span class="ticket-name">優待票</span>X<span class="ticket-number">1</span>=<span
+                  class="ticket-sum">$3000</span></li>
+              <li><span class="ticket-name">愛心票</span>X<span class="ticket-number">1</span>=<span
+                  class="ticket-sum">$3000</span></li>
+              <li><span class="ticket-name">網路訂票手續費</span>X<span class="ticket-number">10</span>=<span
+                  class="ticket-sum">$200</span>
+              </li>
             </div>
             <div class="summary-total">
               <li><span class="ticket-name">TICKETS TOTAL</span>NT$<span class="ticket-sum">$777</span>
@@ -63,29 +68,136 @@
       </div>
     </section>
     <section class="section">
-      <div class="content ">
+      <div class="content tickets-package">
         <div class="main-title l-font">
           <div class="s-font">CHOOSE YOUR TICKET</div>
           <div>請選擇票種與張數</div>
         </div>
         <div class="content-row">
-          <div class="row-left row-5">
+          <div class="row-left row-6">
+                  <div class="table package">
+                    <div class="table-tr package-title l-font">
+                      <div class="table-th sale"><span class="material-icons"> featured_play_list </span>優惠套票</div>
+                    </div>
+                    <div class="package-content">
+                      <div class="table-tr s-font">
+                        <div class="table-th">票種</div>
+                        <div class="table-th">單價</div>
+                        <div class="table-th">數量</div>
+                        <div class="table-th">小計</div>
+                      </div>
+                      <div class="table-tr ticket-set">
+                        <div class="table-td type">雙人電影套票<div class="s-font">電影票 X2、中爆米花 X1、中可樂 X1</div>
+                        </div>
+                        <div class="table-td">NT$777</div>
+                        <div class="table-td ticket-sheet">
+                          <span class="minus">-</span>
+                          <input type="number">
+                          <span class="plus">+</span>
+                        </div>
+                        <div class="table-td">NT$7777</div>
+                      </div>
+                      <div class="table-tr ticket-set">
+                        <div class="table-td type">單人電影套票<div class="s-font">電影票 X1、中爆米花 X1、中可樂 X1</div>
+                        </div>
+                        <div class="table-td">NT$333</div>
+                        <div class="table-td ticket-sheet">
+                          <span class="minus">-</span>
+                          <input type="number">
+                          <span class="plus">+</span>
+                        </div>
+                        <div class="table-td">NT$3333</div>
+                      </div>
+                    </div>
+                  </div>        
+            <div class="table package">
+              <div class="table-tr package-title l-font">
+                <div class="table-th"><span class="material-icons"> featured_play_list </span>一般票種</div>
+              </div>
+              <div class="package-content">
+                <div class="table-tr s-font">
+                  <div class="table-th">票種</div>
+                  <div class="table-th">單價</div>
+                  <div class="table-th">數量</div>
+                  <div class="table-th">小計</div>
+                </div>
+                <div class="table-tr ticket-set">
+                  <div class="table-td type">全票</div>
+                  <div class="table-td">NT$300</div>
+                  <div class="table-td ticket-sheet">
+                    <span class="minus">-</span>
+                    <input type="number">
+                    <span class="plus">+</span>
+                  </div>
+                  <div class="table-td">NT$3000</div>
+                </div>
+                <div class="table-tr ticket-set">
+                  <div class="table-td type">優待票(學生/軍警)<div class="xs-font">【取票時須出示相關證件，以便核對】</div>
+                  </div>
+                  <div class="table-td">NT$270</div>
+                  <div class="table-td ticket-sheet">
+                    <span class="minus">-</span>
+                    <input type="number">
+                    <span class="plus">+</span>
+                  </div>
+                  <div class="table-td">NT$3333</div>
+                </div>
+                <div class="table-tr ticket-set">
+                  <div class="table-td type">愛心/敬老票<div class="xs-font">【取票時須出示相關證件，以便核對】</div>
+                  </div>
+                  <div class="table-td">NT$160</div>
+                  <div class="table-td ticket-sheet">
+                    <span class="minus">-</span>
+                    <input type="number">
+                    <span class="plus">+</span>
+                  </div>
+                  <div class="table-td">NT$3333</div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="row-right row-5">
-            <div class="summary l-font">
-            <span class="material-icons"> featured_play_list </span>ORDER SUMMARY
-            </div>
-            <div class="summary-detail">
-                <li><span class="ticket-name">全票</span>X<span class="ticket-number">8</span>=<span class="ticket-sum">$3000</span></li>
-                <li><span class="ticket-name">優待票</span>X<span class="ticket-number">1</span>=<span class="ticket-sum">$3000</span></li>
-                <li><span class="ticket-name">愛心票</span>X<span class="ticket-number">1</span>=<span class="ticket-sum">$3000</span></li>
-                <li><span class="ticket-name">網路訂票手續費</span>X<span class="ticket-number">10</span>=<span class="ticket-sum">$200</span>
-                </li>
-            </div>
-            <div class="summary-total">
-              <li><span class="ticket-name">TICKETS TOTAL</span>NT$<span class="ticket-sum">$777</span>
+          <div class="row-right row-4">
+            <span class="material-icons">
+              info_outline
+            </span>
+            <div class="note"><span class="material-icons">info</span>訂票及取票注意事項</div>
+            <ul class="s-font">
+              <li>訂票張數限制</li>
+              <li>訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂票張數限制訂。</li>
+            </ul>
+            <div class="note"><span class="material-icons">info</span>退換票規定</div>
+            <ul class="s-font">
+              <li>訂票張數限制</li>
+              <li>
+                訂票張數限制訂票張數限制訂票。
               </li>
-            </div>
+              <li>
+                訂票張數限制訂票張數限制訂票。
+              </li>
+              <li>
+                訂票張數限制訂票張數限制訂票。
+              </li>
+              <li>
+                訂票張數限制訂票張數限制訂票。
+              </li>
+              <li>
+                訂票張數限制訂票張數限制訂票。
+              </li>
+              <li>
+                訂票張數限制訂票張數限制訂票。
+              </li>
+              <li>
+                訂票張數限制訂票張數限制訂票Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum excepturi optio voluptatum doloribus q。
+              </li>
+            </ul>
+          </div>
+          <div class="actionbtn">
+            <button type="button" class="back"><span class="material-icons">
+              west
+            </span>BACK</button>
+              <button type="button" class="next">NEXT<span class="material-icons">
+                east
+              </span></button>
           </div>
         </div>
       </div>
